completed the intro component for the 2nd time

--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,59 @@
             margin:10px;
         }
 
+
+
+        /* FOR DESKTOP VIEW */
+@media only screen  and (min-width: 768px){ 
+
+      
+    body {background:url("images/bg-intro-desktop.png");
+        background-color: #ff7a7a;
+        }
+        
+        
+    input {  height: 3rem;
+            border-radius: 0.25rem;
+            width: 90%;
+         }
+
+    .attribution {font-size: 15px;
+    display: flex;
+    flex-direction: row; 
+    font-family: 'poppins',sans-serif;
+     }
+
+    .aside {flex-grow: 2;
+        align-self:center;
+        width: 50%;
+        margin:0px 50px;
+        
+    }
+    .aside h1{ padding:0px 90px;}
+    .aside p{ padding:0px 30px;}
+    
+    .article{flex-grow: 1; 
+             margin: 50px 20px;
+            }
+     .form {background-color: white;
+        width: 100%;
+    border-radius: 0.25rem;
+          }
+
+     .button {background-color: purple;
+        margin: 10px 15px;
+        height: 3rem;
+        border-radius: 0.25rem;
+        width: 100%;
+    
+    }
+     
+        
+    .submit { background-color: green;
+     color: white;
+     text-transform: uppercase;
+     font-size: large;
+    }
+     
+    
+ }
